src/human_study/program_41/python_err_msg.txt
File "./seq2parse/human_study/program_41/original.py", line 4
    for i < n:
          ^
SyntaxError: invalid syntax
